--- a/boards/ek-tm4c123gxl/freertos_demo/Makefile
+++ b/boards/ek-tm4c123gxl/freertos_demo/Makefile
@@ -30,7 +30,7 @@ PART=TM4C123GH6PM
 #
 # The base directory for TivaWare.
 #
-ROOT=../../../..
+ROOT=../../..
 
 #
 # Include the common make definitions.
@@ -40,22 +40,23 @@ include ${ROOT}/makedefs
 #
 # Where to find source files that do not live in this directory.
 #
-VPATH=../../../../third_party/FreeRTOS/Source/portable/GCC/ARM_CM4F
-VPATH+=../../../../third_party/FreeRTOS/Source/portable/MemMang/
-VPATH+=../../../../third_party/FreeRTOS/Source
+VPATH=${ROOT}/third_party/FreeRTOS/Source/portable/GCC/ARM_CM4F
+VPATH+=${ROOT}/third_party/FreeRTOS/Source/portable/MemMang/
+VPATH+=${ROOT}/third_party/FreeRTOS/Source
 VPATH+=../drivers
-VPATH+=../../../../utils
+VPATH+=${ROOT}/utils
+VPATH+=${ROOT}
 
 #
 # Where to find header files that do not live in the source directory.
 #
 IPATH=.
 IPATH+=..
-IPATH+=../../../..
-IPATH+=../../../../third_party/FreeRTOS/Source/portable/GCC/ARM_CM4F
-IPATH+=../../../../third_party/FreeRTOS
-IPATH+=../../../../third_party/FreeRTOS/Source/include
-IPATH+=../../../../third_party
+IPATH+=${ROOT}
+IPATH+=${ROOT}/third_party/FreeRTOS/Source/portable/GCC/ARM_CM4F
+IPATH+=${ROOT}/third_party/FreeRTOS
+IPATH+=${ROOT}/third_party/FreeRTOS/Source/include
+IPATH+=${ROOT}/third_party
 
 #
 # The default rule, which causes the FreeRTOS example to be built.
